# GatewayEngine

./: .gitignore  README.md
API/: main.py
Engine/include/: OrderBook.hpp  SymbolOrderBookManager.hpp
Engine/src/: SocketServer.cpp  SymbolOrderBookManager.cpp  ThreadPool.cpp  main.cpp
engine/: CMakeLists.txt
engine/include/: Order.hpp  SocketServer.hpp  ThreadPool.hpp
engine/src/: NaiveOrderBook.cpp  RealisticOrderBook.cpp
